--- a/nn-cuda/nn-cuda/nn-cuda.vcxproj
+++ b/nn-cuda/nn-cuda/nn-cuda.vcxproj
@@ -80,6 +80,9 @@
     <CudaCompile Include="kernel.cu" />
     <CudaCompile Include="softmax.cu" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="common.cuh" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 12.3.targets" />
