--- a/nn-cuda/nn-cuda/nn-cuda.vcxproj
+++ b/nn-cuda/nn-cuda/nn-cuda.vcxproj
@@ -77,6 +77,7 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <CudaCompile Include="array_sum.cu" />
     <CudaCompile Include="crossEntropy.cu" />
     <CudaCompile Include="linear_forward.cu" />
     <CudaCompile Include="relu.cu" />
