CMAKE_CUDA_ARCHITECTURES

--- a/nn-cuda/CMakeLists.txt
+++ b/nn-cuda/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
+
+# this has to be set before project()
+ if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
+ set(CMAKE_CUDA_ARCHITECTURES 86)
+ endif()
 project(nn-cuda LANGUAGES CXX CUDA)
 
 # Set C++14 as standard for the host code
