refactor CPU code

--- a/nn-cuda/nn-cuda/nn-cuda.vcxproj
+++ b/nn-cuda/nn-cuda/nn-cuda.vcxproj
@@ -89,9 +89,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.cuh" />
+    <ClInclude Include="ModelLayers.hpp" />
+    <ClInclude Include="ModelMemoryHandler.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpu_main.cpp" />
+    <ClCompile Include="ModelMemoryHandler.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
