add kernel and kernel launchers

--- a/nn-cuda/nn-cuda/nn-cuda.vcxproj
+++ b/nn-cuda/nn-cuda/nn-cuda.vcxproj
@@ -90,6 +90,8 @@
   <ItemGroup>
     <ClInclude Include="common.cuh" />
     <ClInclude Include="ModelLayers.hpp" />
+    <ClInclude Include="ModelLayersKernels.cuh" />
+    <ClInclude Include="ModelLayersKernelsLaunchers.cuh" />
     <ClInclude Include="ModelMemoryHandler.hpp" />
   </ItemGroup>
   <ItemGroup>
