refactor kernels code
note that toCuda in class is not working

--- a/nn-cuda/nn-cuda/nn-cuda.vcxproj
+++ b/nn-cuda/nn-cuda/nn-cuda.vcxproj
@@ -92,7 +92,7 @@
     <ClInclude Include="ModelLayers.hpp" />
     <ClInclude Include="ModelLayersKernels.cuh" />
     <ClInclude Include="ModelLayersKernelsLaunchers.cuh" />
-    <ClInclude Include="ModelMemoryHandler.hpp" />
+    <ClInclude Include="ModelMemoryHandler.cuh" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpu_main.cpp" />
