--- a/nn-cuda/nn-cuda/nn-cuda.vcxproj
+++ b/nn-cuda/nn-cuda/nn-cuda.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
@@ -84,6 +84,7 @@
     <CudaCompile Include="linear_backward.cu" />
     <CudaCompile Include="linear_forward.cu" />
     <CudaCompile Include="main.cu" />
+    <CudaCompile Include="main_training.cu" />
     <CudaCompile Include="MatMul.cu" />
     <CudaCompile Include="reduce_on_axis.cu" />
     <CudaCompile Include="relu.cu" />
@@ -101,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpu_main.cpp" />
+    <ClCompile Include="main_training_cpu.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
