--- a/nn-cuda/CMakeLists.txt
+++ b/nn-cuda/CMakeLists.txt
@@ -44,3 +44,4 @@ target_include_directories(nn-cuda PRIVATE include vendor)
 # Link CUDA libraries if needed (uncomment if needed)
 # target_link_libraries(nn-cuda ${CUDA_LIBRARIES})
 add_executable(training nn-cuda/main_training.cu)
+add_executable(MatMul nn-cuda/MatMul.cu)
