--- a/nn-cuda/CMakeLists.txt
+++ b/nn-cuda/CMakeLists.txt
@@ -45,3 +45,10 @@ target_include_directories(nn-cuda PRIVATE include vendor)
 # target_link_libraries(nn-cuda ${CUDA_LIBRARIES})
 add_executable(training nn-cuda/main_training.cu)
 add_executable(MatMul nn-cuda/MatMul.cu)
+add_executable(reduction nn-cuda/array_reduction.cu)
+add_executable(softmax nn-cuda/log_softmax.cu)
+add_executable(nll_loss nn-cuda/nll_loss.cu)
+add_executable(cross_entr nn-cuda/cross_entropy.cu)
+add_executable(reluu nn-cuda/relu.cu)
+add_executable(linear nn-cuda/linear_forward.cu)
+add_executable(sgd nn-cuda/SGD.cu)
