--- a/nn-cuda/CMakeLists.txt
+++ b/nn-cuda/CMakeLists.txt
@@ -52,3 +52,7 @@ add_executable(cross_entr nn-cuda/cross_entropy.cu)
 add_executable(reluu nn-cuda/relu.cu)
 add_executable(linear nn-cuda/linear_forward.cu)
 add_executable(sgd nn-cuda/SGD.cu)
+add_executable(fused_entr nn-cuda/main_merged_cross.cu)
+add_executable(sll nn-cuda/softmax_nll.cu)
+add_executable(sc_back nn-cuda/soft_cross_backward.cu)
+add_executable(linear_back nn-cuda/linear_backward.cu)
